--- a/index.html
+++ b/index.html
@@ -3,29 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="/src/Captura de tela 2024-08-15 145644.png" type="image/png">
-    <title>Espaço bbc</title>
+    <link rel="stylesheet" href="css/styles.css">    
+    <title>App financeiro</title>
 </head>
 <body>
     <main>
-        <div class="main">
-            <img class="img" src="src/Captura de tela 2024-08-15 145548.png" alt="">
-            <h2>Espaço bbc</h2>            
+        <div class="main">            
+            <h2>Finanças</h2>            
         </div>
         <div class="saudacao">
             <h3 id="greeting"></h3>                       
         </div>
         <div class="h41">
-            <h4>Escolha qual área vc deseja acessar.</h4>
+            <h4>Bem vindo ao aplicativo de controle</h4>
         </div>
         <div class="links">
-            <a class="estetica" href="https://financeiro-app-eight.vercel.app/">Estética bbc</a>
-            <a class="barbearia" href="https://barbearia-bbc.vercel.app/">Barbearia bbc</a>
+            <a class="estetica" href="https://app-financas-luiz.vercel.app//">Acessar Aplicativo</a>
+            
         </div>
         <div class="futter1">
-            <img class="futter" src="src/Captura de tela 2024-08-15 145548.png" alt="">
-            <img class="futter" src="src/Captura de tela 2024-08-15 145644.png" alt="">
         </div>
     </main>
     <script>
