--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             let greeting;
 
             if (hour >= 6 && hour < 12) {
-                greeting = "Bom dia! Aldair Santos";
+                greeting = "Bom dia! Luíz Fernando";
             } else if (hour >= 12 && hour < 18) {
-                greeting = "Boa tarde! Aldair Santos";
+                greeting = "Boa tarde! Luíz Fernando";
             } else if (hour >= 18 && hour < 22) {
-                greeting = "Boa noite! Aldair Santos";
+                greeting = "Boa noite! Luíz Fernando";
             } else {
-                greeting = "Boa noite! Aldair Santos";
+                greeting = "Boa noite! ALuíz Fernando";
             }
 
             return greeting;
