--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>App financeiro</title>
 </head>
 <body>
+    <img="https://images.app.goo.gl/akLcnHhPCRhbMwCc6">
     <main>
         <div class="main">            
             <h2>Finanças</h2>            
