--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <main>
-        <div class="main">            
-            <h2>Finanças</h2>            
-        </div>
         <div class="saudacao">
             <h3 id="greeting"></h3>                       
         </div>
@@ -18,7 +15,7 @@
             <h4>Bem vindo ao aplicativo de controle</h4>
         </div>
         <div class="links">
-            <a class="estetica" href="https://app-financas-luiz.vercel.app//">Acessar Aplicativo</a>
+            <a class="estetica" href="https://app-financas-luiz.vercel.app/">Acessar Aplicativo</a>
             
         </div>
         <div class="futter1">
